// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sourcemaps directives 1`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                  ^^^^^ > 5 at 34
    </template>
    
----
        a=""
        onA={$event => {
          (onNum)($event);
           ^^^^^ > 5 at 514
        }}
        onB={$event => {
`;

exports[`sourcemaps directives 2`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                     ^^ > 2 at 37
    </template>
    
----
        a=""
        onA={$event => {
          (onNum)($event);
              ^^ > 2 at 517
        }}
        onB={$event => {
`;

exports[`sourcemaps directives 3`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                  ^^^^^ > 5 at 34
    </template>
    
----
        a=""
        onA={$event => {
          (onNum)($event);
           ^^^^^ > 5 at 514
        }}
        onB={$event => {
`;

exports[`sourcemaps directives 4`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                     ^^ > 2 at 37
    </template>
    
----
        a=""
        onA={$event => {
          (onNum)($event);
              ^^ > 2 at 517
        }}
        onB={$event => {
`;

exports[`sourcemaps directives 5`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                            ^^^^ > 4 at 44
    </template>
    
----
          (onNum)($event);
        }}
        onB={$event => {
        ^^^^ > 4 at 549
          (onNum)($event);
        }}
`;

exports[`sourcemaps directives 6`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                                                   ^^^^^^^^ > 8 at 67
    </template>
    
----
        onC={$event => {
          (($event) => {
          call.a['func']($event)
                ^^^^^^^^ > 8 at 670
          })($event);
        }}
`;

exports[`sourcemaps directives 7`] = `

    <template>
      <B a="" @a="onNum" @b.once="onNum" @c="call.a['func']($event)" />
                                                            ^^^^^^ > 6 at 76
    </template>
    
----
        onC={$event => {
          (($event) => {
          call.a['func']($event)
                         ^^^^^^ > 6 at 679
          })($event);
        }}
`;
